test/spec_vectors/func/fail/module_63.wat
(module (func $type-break-nested-void-vs-num (result i32) (block (br 1 (nop))) (br 0 (i32.const 1))))